<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteActivity"
    android:background="@drawable/app_background">

    <TextView
        android:id="@+id/writeGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/recoleta"
        android:text="@string/greetings3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writeGreet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/recoleta"
        android:text="@string/greetings4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/writeGreet" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/title_of_the_movie"
        android:inputType="text"
        android:lines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/writeGreet1" />

    <EditText
        android:id="@+id/editLanguage"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/language"
        android:inputType="text"
        android:lines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTitle"/>

    <EditText
        android:id="@+id/editGenre"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/genre"
        android:inputType="text"
        android:lines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLanguage"/>

    <EditText
        android:id="@+id/editRating"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:hint="@string/your_rating"
        android:inputType="numberDecimal"
        android:lines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editGenre"/>

    <EditText
        android:id="@+id/editReview"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:background="@drawable/custom_input"
        android:hint="@string/your_review"
        android:inputType="text"
        android:lines="4"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRating"
        />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/recoleta"
        android:text="@string/post_review"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editReview" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/recoleta"
        android:text="@string/didnt_watch_anything"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPost" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/recoleta"
        android:text="@string/read_reviews"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question" />

</androidx.constraintlayout.widget.ConstraintLayout>